[package]
name = "cuda-crdt"
version = "0.1.0"
edition = "2021"
description = "CRDTs — G/PN-Counter, OR-Set, LWW-Register/Map, Vector Clock"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-crdt"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
